--- a/app/views/v1/operator-list.html
+++ b/app/views/v1/operator-list.html
@@ -7,115 +7,53 @@
 
   <a href="/v1/operator-add" class="govuk-button">Add new service group</a>
 
-  {{ govukTable({
-    caption: "",
-    firstCellIsHeader: true,
-    head: [
-      {
-        text: "Name",
-        classes: "govuk-!-width-half"
-      },
-      {
-        text: "Services",
-        format: "numeric",
-        classes: "govuk-!-width-one-quarter"
-      },
-      {
-        text: "Organisations",
-        format: "numeric",
-        classes: "govuk-!-width-one-quarter"
-      },
-      {
-        text: "Users",
-        format: "numeric"
-      }
-    ],
-    rows: [
-      [
-        {
-          html: '<a href="/v1/dashboard-operators" class="govuk-link">Health</a>'
-        },
-        {
-          html: '<a href="/v1/service-list" class="govuk-link">4</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/organisation-list" class="govuk-link">18</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/user-list" class="govuk-link">214</a>',
-          format: "numeric"
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/dashboard-operators" class="govuk-link">State Pension</a>'
-        },
-        {
-          html: '<a href="/v1/service-list" class="govuk-link">2</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/organisation-list" class="govuk-link">23</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/user-list" class="govuk-link">167</a>',
-          format: "numeric"
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/dashboard-operators" class="govuk-link">Universal Credit</a>'
-        },
-        {
-          html: '<a href="/v1/service-list" class="govuk-link">8</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/organisation-list" class="govuk-link">43</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/user-list" class="govuk-link">1004</a>',
-          format: "numeric"
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/dashboard-operators" class="govuk-link">Operator Name</a>'
-        },
-        {
-          html: '<a href="/v1/service-list" class="govuk-link">1</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/organisation-list" class="govuk-link">3</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/user-list" class="govuk-link">66</a>',
-          format: "numeric"
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/dashboard-operators" class="govuk-link">Another Operator</a>'
-        },
-        {
-          html: '<a href="/v1/service-list" class="govuk-link">2</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/organisation-list" class="govuk-link">12</a>',
-          format: "numeric"
-        },
-        {
-          html: '<a href="/v1/user-list" class="govuk-link">96</a>',
-          format: "numeric"
-        }
-      ]
-    ]
-  }) }}
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th scope="col" class="govuk-table__header govuk-!-width-half">Name</th>
+        <th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">Services</th>
+        <th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">Organisations</th>
+        <th scope="col" class="govuk-table__header govuk-table__header--numeric">Users</th>
+      </tr>
+    </thead>
+
+    <tbody class="govuk-table__body">
+      {% if data['operator-name'] %}
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/dashboard-operators" class="govuk-link">{{ data['operator-name'] }}</a></th>
+        <td class="govuk-table__cell govuk-table__cell--numeric">-</td>
+        <td class="govuk-table__cell govuk-table__cell--numeric">-</td>
+        <td class="govuk-table__cell govuk-table__cell--numeric">-</td>
+      </tr>
+      {% endif %}
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/dashboard-operators" class="govuk-link">State Pension</a></th>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/service-list" class="govuk-link">2</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/organisation-list" class="govuk-link">23</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/user-list" class="govuk-link">167</a></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/dashboard-operators" class="govuk-link">Universal Credit</a></th>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/service-list" class="govuk-link">8</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/organisation-list" class="govuk-link">43</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/user-list" class="govuk-link">1004</a></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/dashboard-operators" class="govuk-link">Operator Name</a></th>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/service-list" class="govuk-link">1</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/organisation-list" class="govuk-link">3</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/user-list" class="govuk-link">66</a></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/dashboard-operators" class="govuk-link">Another Operator</a></th>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/service-list" class="govuk-link">2</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/organisation-list" class="govuk-link">12</a></td>
+        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/v1/user-list" class="govuk-link">96</a></td>
+      </tr>
+    </tbody>
+  </table>
 {% endblock %}
