--- a/app/views/v1/user-list.html
+++ b/app/views/v1/user-list.html
@@ -7,123 +7,72 @@
 
   <a href="/v1/user-add" class="govuk-button">Add new user</a>
 
-  {{ govukTable({
-    caption: "",
-    firstCellIsHeader: true,
-    head: [
-      {
-        text: "Name"
-      },
-      {
-        text: "Email address"
-      },
-      {
-        text: "Organisation",
-        classes: "govuk-!-width-one-quarter"
-      },
-      {
-        text: "Status"
-      }
-    ],
-    rows: [
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">David Batty</a>'
-        },
-        {
-          html: '<a href="mailto:david.batty@leedsutd.co.uk" class="govuk-link">david.batty@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Gary Speed</a>'
-        },
-        {
-          html: '<a href="mailto:gary.speed@leedsutd.co.uk" class="govuk-link">gary.speed@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag govuk-tag--inactive">Suspended</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Gordon Strachan</a>'
-        },
-        {
-          html: '<a href="mailto:gordon.strachan@leedsutd.co.uk" class="govuk-link">gordon.strachan@leedsutd.co.uk</a>'
-        },
-        {
-          text: "G3S"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Gary McAllister</a>'
-        },
-        {
-          html: '<a href="mailto:gary.mcallister@leedsutd.co.uk" class="govuk-link">gary.mcallister@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Tony Dorigo</a>'
-        },
-        {
-          html: '<a href="mailto:tony.dorigo@leedsutd.co.uk" class="govuk-link">tony.dorigo@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Mel Sterland</a>'
-        },
-        {
-          html: '<a href="mailto:mel.sterland@leedsutd.co.uk" class="govuk-link">mel.sterland@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ],
-      [
-        {
-          html: '<a href="/v1/user-view" class="govuk-link">Some Dude</a>'
-        },
-        {
-          html: '<a href="mailto:some.dude@leedsutd.co.uk" class="govuk-link">some.dude@leedsutd.co.uk</a>'
-        },
-        {
-          text: "Capita"
-        },
-        {
-          html: '<span class="govuk-tag">Active</span>'
-        }
-      ]
-    ]
-  }) }}
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+
+        <th scope="col" class="govuk-table__header">Name</th>
+
+        <th scope="col" class="govuk-table__header">Email address</th>
+
+        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
+
+        <th scope="col" class="govuk-table__header">Status</th>
+
+      </tr>
+    </thead>
+
+    <tbody class="govuk-table__body">
+      {% if data['user-first-name'] %}
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">{{ data['user-first-name'] }} {{ data['user-last-name'] }}</a></th>
+        <td class="govuk-table__cell"><a href="mailto:{{ data['user-email-address'] }}" class="govuk-link">{{ data['user-email-address'] }}</a></td>
+        <td class="govuk-table__cell">-</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+      {% endif %}
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gary Speed</a></th>
+        <td class="govuk-table__cell"><a href="mailto:gary.speed@leedsutd.co.uk" class="govuk-link">gary.speed@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gordon Strachan</a></th>
+        <td class="govuk-table__cell"><a href="mailto:gordon.strachan@leedsutd.co.uk" class="govuk-link">gordon.strachan@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">G3S</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Gary McAllister</a></th>
+        <td class="govuk-table__cell"><a href="mailto:gary.mcallister@leedsutd.co.uk" class="govuk-link">gary.mcallister@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Tony Dorigo</a></th>
+        <td class="govuk-table__cell"><a href="mailto:tony.dorigo@leedsutd.co.uk" class="govuk-link">tony.dorigo@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Mel Sterland</a></th>
+        <td class="govuk-table__cell"><a href="mailto:mel.sterland@leedsutd.co.uk" class="govuk-link">mel.sterland@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+
+      <tr class="govuk-table__row">
+        <th scope="row" class="govuk-table__header"><a href="/v1/user-view" class="govuk-link">Some Dude</a></th>
+        <td class="govuk-table__cell"><a href="mailto:some.dude@leedsutd.co.uk" class="govuk-link">some.dude@leedsutd.co.uk</a></td>
+        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+      </tr>
+    </tbody>
+  </table>
 {% endblock %}
