Change button style for 'make changes' and add links to confirmation pages

--- a/app/views/v1/organisation-confirmation.html
+++ b/app/views/v1/organisation-confirmation.html
@@ -10,5 +10,9 @@
     titleText: "Organisation added: " + data["organisation-name"],
     html: "Some additional helpful text here"
   }) }}
+
+  <a href="/v1/organisation-list" class="govuk-link">View all partner organisations</a><br>
+  <a href="/v1/organisation-add" class="govuk-link">Add another partner organisation</a><br>
+  <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
 </div>
 {% endblock %}
