--- a/app/views/v1/organisation-summary.html
+++ b/app/views/v1/organisation-summary.html
@@ -62,5 +62,5 @@
 }) }}
 
 <a href="/v1/organisation-confirmation" class="govuk-button">Continue</a>
-<a href="/v1/organisation-edit" class="govuk-button">Make changes</a>
+<a href="/v1/organisation-edit" class="govuk-button govuk-button--secondary">Make changes</a>
 {% endblock %}
