--- a/app/views/v1/service-confirmation.html
+++ b/app/views/v1/service-confirmation.html
@@ -10,5 +10,9 @@
     titleText: "Service added: " + data["service-name"],
     html: "Some additional helpful text here"
   }) }}
+
+  <a href="/v1/service-list" class="govuk-link">View all services</a><br>
+  <a href="/v1/service-add" class="govuk-link">Add another service</a><br>
+  <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
 </div>
 {% endblock %}
