--- a/app/views/v1/user-confirmation.html
+++ b/app/views/v1/user-confirmation.html
@@ -11,5 +11,6 @@
   }) }}
 
   <a href="/v1/user-list" class="govuk-link">View all users</a><br>
+  <a href="/v1/user-add" class="govuk-link">Add another user</a><br>
   <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
 {% endblock %}
