--- a/app/views/v1/user-summary.html
+++ b/app/views/v1/user-summary.html
@@ -54,5 +54,5 @@
 }) }}
 
 <a href="/v1/user-confirmation" class="govuk-button">Continue</a>
-<a href="/v1/user-edit" class="govuk-button">Make changes</a>
+<a href="/v1/user-edit" class="govuk-button govuk-button--secondary">Make changes</a>
 {% endblock %}
