--- a/app/views/v1/operator-confirmation.html
+++ b/app/views/v1/operator-confirmation.html
@@ -10,5 +10,9 @@
     titleText: "Service group added: " + data["operator-name"],
     html: "Some additional helpful text here"
   }) }}
+
+  <a href="/v1/operator-list" class="govuk-link">View all service groups</a><br>
+  <a href="/v1/operator-add" class="govuk-link">Add another service group</a><br>
+  <a href="/v1/dashboard-root" class="govuk-link">Go to the dashboard</a>
 </div>
 {% endblock %}
