Change first and last name to full name throughout, add 'change' links throughout summary pages

--- a/app/views/v1/operator-add.html
+++ b/app/views/v1/operator-add.html
@@ -26,18 +26,10 @@
 
       {{ govukInput({
         label: {
-          text: "Group admin first name"
+          text: "Group admin full name"
         },
-        id: "operator-admin-first-name",
-        name: "operator-admin-first-name"
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Group admin last name"
-        },
-        id: "operator-admin-last-name",
-        name: "operator-admin-last-name"
+        id: "operator-admin-full-name",
+        name: "operator-admin-full-name"
       }) }}
 
       {{ govukInput({
