--- a/app/views/v1/organisation-edit.html
+++ b/app/views/v1/organisation-edit.html
@@ -27,20 +27,11 @@
 
       {{ govukInput({
         label: {
-          text: "Organisation admin first name"
+          text: "Organisation admin full name"
         },
-        id: "organisation-admin-first-name",
-        name: "organisation-admin-first-name",
-        value: data["organisation-admin-first-name"]
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Organisation admin last name"
-        },
-        id: "organisation-admin-last-name",
-        name: "organisation-admin-last-name",
-        value: data["organisation-admin-last-name"]
+        id: "organisation-admin-full-name",
+        name: "organisation-admin-full-name",
+        value: data["organisation-admin-full-name"]
       }) }}
 
       {{ govukInput({
