--- a/app/views/v1/service-edit.html
+++ b/app/views/v1/service-edit.html
@@ -27,20 +27,11 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin first name"
+          text: "Service admin full name"
         },
-        id: "service-admin-first-name",
-        name: "service-admin-first-name",
-        value: data["service-admin-first-name"]
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Service admin last name"
-        },
-        id: "service-admin-last-name",
-        name: "service-admin-last-name",
-        value: data["service-admin-last-name"]
+        id: "service-admin-full-name",
+        name: "service-admin-full-name",
+        value: data["service-admin-full-name"]
       }) }}
 
       {{ govukInput({
