--- a/app/views/v1/user-add.html
+++ b/app/views/v1/user-add.html
@@ -18,18 +18,10 @@
 
       {{ govukInput({
         label: {
-          text: "First name"
+          text: "Full name"
         },
-        id: "user-first-name",
-        name: "user-first-name"
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Last name"
-        },
-        id: "user-last-name",
-        name: "user-last-name"
+        id: "user-full-name",
+        name: "user-full-name"
       }) }}
 
       {{ govukInput({
