--- a/app/views/v1/user-confirmation.html
+++ b/app/views/v1/user-confirmation.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   {{ govukPanel({
-    titleText: "User added: " + data["user-first-name"] + " " + data["user-last-name"],
+    titleText: "User added: " + data["user-full-name"],
     text: "Some useful additional text here"
   }) }}
 
