--- a/app/views/v1/user-edit.html
+++ b/app/views/v1/user-edit.html
@@ -18,20 +18,11 @@
 
       {{ govukInput({
         label: {
-          text: "First name"
+          text: "Full name"
         },
-        id: "user-first-name",
-        name: "user-first-name",
-        value: data["user-first-name"]
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Last name"
-        },
-        id: "user-last-name",
-        name: "user-last-name",
-        value: data["user-last-name"]
+        id: "user-full-name",
+        name: "user-full-name",
+        value: data["user-full-name"]
       }) }}
 
       {{ govukInput({
