--- a/app/views/v1/operator-edit.html
+++ b/app/views/v1/operator-edit.html
@@ -27,20 +27,11 @@
 
       {{ govukInput({
         label: {
-          text: "Service group admin first name"
+          text: "Service group admin full name"
         },
-        id: "operator-admin-first-name",
-        name: "operator-admin-first-name",
-        value: data["operator-admin-first-name"]
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Service group admin last name"
-        },
-        id: "operator-admin-last-name",
-        name: "operator-admin-last-name",
-        value: data["operator-admin-last-name"]
+        id: "operator-admin-full-name",
+        name: "operator-admin-full-name",
+        value: data["operator-admin-full-name"]
       }) }}
 
       {{ govukInput({
