--- a/app/views/v1/service-add.html
+++ b/app/views/v1/service-add.html
@@ -26,18 +26,10 @@
 
       {{ govukInput({
         label: {
-          text: "Service admin first name"
+          text: "Service admin full name"
         },
-        id: "service-admin-first-name",
-        name: "service-admin-first-name"
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Service admin last name"
-        },
-        id: "service-admin-last-name",
-        name: "service-admin-last-name"
+        id: "service-admin-full-name",
+        name: "service-admin-full-name"
       }) }}
 
       {{ govukInput({
