--- a/app/views/v1/user-edit--self.html
+++ b/app/views/v1/user-edit--self.html
@@ -17,20 +17,11 @@
 
     {{ govukInput({
       label: {
-        text: "First name"
+        text: "Full name"
       },
-      id: "user-first-name",
-      name: "user-first-name",
-      value: "Jane"
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "Last name"
-      },
-      id: "user-last-name",
-      name: "user-last-name",
-      value: "Smith"
+      id: "user-full-name",
+      name: "user-full-name",
+      value: "Jane Smith"
     }) }}
 
     {{ govukInput({
