--- a/app/views/v1/operator-edit-3.html
+++ b/app/views/v1/operator-edit-3.html
@@ -1,31 +1,25 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Add new Group - {{serviceName}}
+  Edit service group - {{serviceName}}
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
-    <form action="/v1/operator-add-2" method="post" class="form">
+    <form action="/v1/operator-summary" method="post" class="form">
       {{ govukFieldset({
         legend: {
-          text: "Add a service group",
+          text: "Edit service group",
           classes: "govuk-fieldset__legend--l",
           isPageHeading: true
         }
       })}}
 
-      {{ govukInput({
-        label: {
-          text: "Service group name"
-        },
-        id: "operator-name",
-        name: "operator-name"
-      }) }}
+      {% include "includes/operator-access-rights.html" %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Save changes"
       }) }}
     </form>
   </div>
